<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_create_account">Create Account</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="info_details">Info</string>
    <string name="menu_export">Export…</string>
    <string name="description_add_transaction_icon">Add a new transaction to an account</string>
    <string name="description_view_account_icon">View account details</string>
    <string name="label_no_accounts">No accounts to display</string>
    <string name="label_account_name">Account name</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_test">Test</string>
    <string name="label_passcode">Enter Passcode</string>
    <string name="toast_wrong_passcode">Wrong passcode, please try again</string>
    <string name="toast_passcode_set">Passcode set</string>
    <string name="label_confirm_passcode">Please confirm your passcode</string>
    <string name="toast_invalid_passcode_confirmation">Invalid passcode confirmation. Please try again</string>
    <string name="label_transaction_name">Description</string>
    <string name="label_transaction_amount">Amount</string>
    <string name="title_add_transaction">New transaction</string>
    <string name="label_no_transactions">No transactions to display</string>
    <string name="label_timeanddate">DATE &amp; TIME</string>
    <string name="label_account">Account</string>
    <string name="label_debit">DEBIT</string>
    <string name="label_credit">CREDIT</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="menu_delete">Delete</string>
    <string name="alert_dialog_ok_delete">Delete</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="toast_account_deleted">Account deleted</string>
    <string name="title_confirm_delete">Confirm delete</string>
    <string name="delete_account_confirmation_message">All transactions in this account will also be deleted</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="label_transaction_description">Add note</string>
    <string name="menu_move">MOVE</string>
    <string name="title_selected">%1$d selected</string>
    <string name="label_account_balance">Balance:</string>
    <string name="label_export_destination">Export To:</string>
    <string name="title_export_dialog">Export Transactions</string>
    <string name="option_export_all_transactions">Export all transactions</string>
    <string name="hint_export_choice">By default, only new transactions since last export will be exported. Check this option to export all transactions</string>
    <string name="toast_export_error">Error exporting %1$s file</string>
    <string name="btn_export">Export</string>
    <string name="option_delete_after_export">Delete transactions after export</string>
    <string name="hint_delete_after_export">All exported transactions will be deleted when exporting is completed</string>
    <string name="title_settings">Settings</string>
    <string-array name="export_destinations">
        <item>Save As&#8230;</item>
        <item>Dropbox</item>
        <item>ownCloud</item>
        <item>Send to&#8230;</item>
    </string-array>
    <string name="btn_move">Move</string>
    <string name="title_move_transactions">Move %1$d transaction(s)</string>
    <string name="label_move_destination">Destination Account</string>
    <string name="permission_access_sdcard">Access SD Card</string>
    <string name="toast_incompatible_currency">Cannot move transactions.\nThe destination account uses a different currency from origin account</string>
    <string name="header_general_settings">General</string>
    <string name="header_about_gnucash">About</string>
    <string name="title_choose_currency">Choose default currency</string>
    <string name="title_default_currency">Default currency</string>
    <string name="summary_default_currency">Default currency to assign to new accounts</string>
    <string name="label_permission_record_transactions">Enables recording transactions in GnuCash for Android</string>
    <string name="label_permission_create_accounts">Enables creation of accounts in GnuCash for Android</string>
    <string name="label_permission_group">Your GnuCash data</string>
    <string name="description_permission_group">Read and modify GnuCash data</string>
    <string name="label_permission_record_transaction">Record transactions in GnuCash</string>
    <string name="label_permission_create_account">Create accounts in GnuCash</string>
    <string name="label_display_account">Display account</string>
    <string name="label_hide_account_balance">Hide account balance in widget</string>
    <string name="btn_create_accounts">Create Accounts</string>
    <string name="title_default_accounts">Select accounts to create</string>
	<string name="error_no_accounts">No accounts exist in GnuCash.\nCreate an account before adding a widget</string>
	<string name="title_build_version">Build version</string>
	<string name="title_license">License</string>
	<string name="summary_licence_details">Apache License v2.0. Click for details</string>
	<string name="title_general_prefs">General Preferences</string>
	<string name="label_widget_configuration">Select Account</string>
	<string name="toast_no_transactions_to_export">There are no transactions available to export</string>
    <string name="header_passcode_settings">Passcode</string>
    <string name="title_passcode_preferences">Passcode Preferences</string>
    <string name="title_enable_passcode">Enable passcode</string>
    <string name="title_change_passcode">Change Passcode</string>
	<string name="title_about_gnucash">About GnuCash</string>
	<string name="summary_about_gnucash">A mobile finance management and expense-tracker designed for Android</string>
	<string name="title_about">About</string>
	<string name="toast_format_exported_to">%1$s file exported to:\n</string>
	<string name="title_export_email">GnuCash Android %1$s export</string>
	<string name="description_export_email">GnuCash Android Export from </string>
	<string name="header_transaction_settings">Transactions</string>
	<string name="title_transaction_preferences">Transaction Preferences</string>
	<string name="title_account_preferences">Account Preferences</string>
	<string name="title_default_transaction_type">Default Transaction Type</string>
	<string name="summary_default_transaction_type">The type of transaction to use by default, CREDIT or DEBIT</string>
	<string-array name="transaction_types">
		<item>CREDIT</item>
		<item>DEBIT</item>
	</string-array>
	<string name="msg_delete_all_transactions_confirmation">Are you sure you want to delete ALL transactions?</string>
	<string name="msg_delete_transaction_confirmation">Are you sure you want to delete this transaction?</string>
	<string name="title_export_preference_category">Export</string>
	<string name="title_export_all_transactions">Export all transactions</string>
	<string name="title_always_delete_exported_transactions">Delete exported transactions</string>
	<string name="title_default_export_email">Default export email</string>
	<string name="summary_default_export_email">The default email address to send exports to. You can still change this when you export.</string>
	<string name="label_double_entry_account">Transfer Account</string>
	<string name="summary_use_double_entry">All transactions will be a transfer from one account to another</string>
	<string name="title_use_double_entry">Activate Double Entry</string>
	<string name="account_balance">Balance</string>
	<string name="toast_no_account_name_entered">Enter an account name to create an account</string>
	<string name="label_account_currency">Currency</string>
	<string name="label_parent_account">Parent account</string>
	<string name="title_xml_ofx_header">Use XML OFX header</string>
	<string name="summary_xml_ofx_header">Enable this option when exporting to third-party application other than GnuCash for desktop</string>
	<string name="title_whats_new">What\'s New</string>
	<string name="whats_new">
        - Support for multiple different books \n
        - Adds ownCloud as destination for exports\n
        - Compact view for transactions list\n
        - Re-design of passcode lock screen\n
        - Improved handling of scheduled transactions\n
        - Multiple bug fixes and improvements\n
	</string>
	<string name="label_dismiss">Dismiss</string>
    <string name="toast_transanction_amount_required">Enter an amount to save the transaction</string>
    <string name="toast_error_edit_multi_currency_transaction">Multi-currency transactions cannot be modified</string>
    <string name="menu_import_accounts">Import GnuCash Accounts</string>
    <string name="btn_import_accounts">Import Accounts</string>
    <string name="toast_error_importing_accounts">An error occurred while importing the GnuCash accounts</string>
    <string name="toast_success_importing_accounts">GnuCash Accounts successfully imported</string>
    <string name="summary_import_accounts">Import account structure exported from GnuCash desktop</string>
    <string name="title_import_accounts">Import GnuCash XML</string>
    <string name="summary_delete_all_accounts">Delete all accounts in the database. All transactions will be deleted as
        well.
    </string>
    <string name="title_delete_all_accounts">Delete all accounts</string>
    <string name="header_account_settings">Accounts</string>
    <string name="toast_all_accounts_deleted">All accounts have been successfully deleted</string>
    <string name="confirm_delete_all_accounts">Are you sure you want to delete all accounts and transactions?\n\nThis
        operation cannot be undone!
    </string>
    <string name="label_account_type">Account Type</string>
    <string name="summary_delete_all_transactions">All transactions in all accounts will be deleted!</string>
    <string name="label_recurring_transaction">Recurrence</string>
    <string name="hint_split_memo">Memo</string>
    <string name="menu_title_favorite">Favorite</string>
    <string name="menu_order_by_size">Order by size</string>
    <string name="menu_toggle_legend">Show legend</string>
    <string name="menu_toggle_labels">Show labels</string>
    <string name="menu_toggle_percentage_mode">Show percentage</string>
    <string name="menu_toggle_average_lines">Show average lines</string>
    <string name="menu_group_smaller_slices">Group Smaller Slices</string>
    <string name="label_tap_to_create_schedule">Tap to create schedule</string>
    <string name="header_backup_and_export_settings">Backup &amp; export</string>
    <string name="nav_menu_favorites">Favorites</string>
    <string name="nav_menu_open">Open…</string>
    <string name="nav_menu_reports">Reports</string>
    <string name="nav_menu_scheduled_transactions">Scheduled Transactions</string>
    <string name="nav_menu_export">Export…</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="owncloud_server">https://</string>
    <string name="owncloud_server_invalid">OC server not found</string>
    <string name="owncloud_user_invalid">OC username/password invalid</string>
    <string name="label_export_format"> Format</string>
    <string name="nav_menu_scheduled_backups">Scheduled Exports</string>
    <string name="menu_group_by">Group By</string>
    <string name="menu_group_by_month">Month</string>
    <string name="menu_group_by_quarter">Quarter</string>
    <string name="menu_group_by_year">Year</string>
    <string name="menu_title_enable_sync">Enable Sync</string>
    <string name="menu_show_compact_view">Compact View</string>
    <string name="menu_rename">Rename</string>
</resources>