<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c) 2015 Ngewi Fet <ngewif@gmail.com>

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- TODO: add icons -->
    <item
        android:id="@+id/nav_section_accounts"
        android:title="@string/title_accounts">
        <menu>
            <item
                android:id="@+id/nav_item_open"
                android:title="@string/nav_menu_open"/>
            <item
                android:id="@+id/nav_item_favorites"
                android:title="@string/nav_menu_favorites"/>
            <item android:id="@+id/nav_item_reports"
                android:title="@string/nav_menu_reports" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_section_transactions"
        android:title="@string/title_transactions">
        <menu>
            <item
                android:id="@+id/nav_item_scheduled_trn"
                android:title="@string/nav_menu_scheduled_transactions"/>
            <item
                android:id="@+id/nav_item_scheduled_export"
                android:title="@string/nav_menu_scheduled_backups"/>
            <item
                android:id="@+id/nav_item_export"
                android:title="@string/nav_menu_export"/>
        </menu>
    </item>
    <item
        android:id="@+id/nav_item_settings"
        android:title="@string/nav_menu_settings"/>

</menu>