<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright (c) 2015 Ngewi Fet <ngewif@gmail.com>

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="GnuCash Settings">
    <Preference android:key="@string/key_prefs_header_general"
        android:title="@string/header_general_settings"
        app:fragment="org.gnucash.android.ui.settings.GeneralPreferenceFragment"/>
    <Preference app:fragment="org.gnucash.android.ui.settings.AccountPreferencesFragment"
        android:title="@string/header_account_settings" />
    <Preference app:fragment="org.gnucash.android.ui.settings.TransactionsPreferenceFragment"
        android:title="@string/header_transaction_settings" />
    <Preference app:fragment="org.gnucash.android.ui.settings.BackupPreferenceFragment"
        android:title="@string/header_backup_and_export_settings" />
    <Preference app:fragment="org.gnucash.android.ui.settings.AboutPreferenceFragment"
        android:title="@string/header_about_gnucash" />
    <Preference android:title="Rate in Play Store">
        <intent android:action="android.intent.action.VIEW"
            android:data="market://details?id=org.gnucash.android" />
    </Preference>
</PreferenceScreen>