<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2014 Ngewi Fet <ngewif@gmail.com>

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/split_currency_symbol"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dialog_padding"
                android:paddingRight="5dp"
                android:gravity="center|right"
                android:textColor="@color/debit_red"
                android:textSize="22sp"
                android:text="$"/>

        <EditText
                android:id="@+id/input_split_amount"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dialog_padding"
                android:hint="@string/label_transaction_amount"
                android:inputType="number"
                android:nextFocusDown="@+id/input_split_memo"
                android:textColor="@color/debit_red"
                style="@style/ListItemText"/>

        <org.gnucash.android.ui.util.TransactionTypeSwitch
            android:id="@+id/btn_split_type"
                      android:layout_width="0dp"
                      android:layout_weight="3"
                      android:layout_height="wrap_content"
                      android:textOn="@string/label_debit"
                      android:textOff="@string/label_credit"
                      android:textAppearance="?android:attr/textAppearanceMedium"
                      android:textColor="@color/debit_red"
                      android:checked="true"/>
        <ImageButton android:id="@+id/btn_remove_split"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:src="@drawable/navigation_cancel_holo_light"/>
    </LinearLayout>

    <EditText android:id="@+id/input_split_memo"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:singleLine="false"
              android:hint="@string/hint_split_memo"
              android:inputType="textMultiLine|textCapSentences"
              android:gravity="top" />

    <Spinner
            android:id="@+id/input_accounts_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <!-- Only serves to store the split UID for background processing. Not relevant to user-->
    <TextView android:id="@+id/split_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    <View
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:layout_marginTop="@dimen/dialog_padding"
          android:layout_marginBottom="@dimen/dialog_padding"
          android:background="@color/abs__holo_blue_light"/>

</LinearLayout>